<resources>
    <string name="app_name">YourFitnessApp</string>
    <string name="main_save_activity_button">Save Activity</string>
    <string name="main_register_activity_button">Start Activity</string>
    <string name="main_activity_name_placeholder">You activity name</string>
    <string name="main_activity_duration_placeholder">Duration (in minutes)</string>
    <string name="main_activity_type_placeholder">Type (running, yoga, cycling…)</string>
    <string name="accelerometer_activity_title">Accelerometer Intensity"</string>
    <string name="accelerometer_end_activity_button">End Activity</string>
</resources>