<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:padding="12dp"
    android:background="@color/main"
    android:fitsSystemWindows="true"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/etActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/main_activity_name_placeholder"
        android:inputType="text"
        android:padding="8sp"
    />

    <EditText
        android:id="@+id/etDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/main_activity_duration_placeholder"
        android:inputType="number"
        android:padding="8sp"
        />

    <EditText
        android:id="@+id/etType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/main_activity_type_placeholder"
        android:inputType="text"
        android:padding="8sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_horizontal"
        android:fitsSystemWindows="true">
    <Button
        android:id="@+id/btnSaveActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/main_save_activity_button" />

    <Button
        android:id="@+id/btnRegisterActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/main_register_activity_button" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvActivities"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>